; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/Documentation/extr_lis3l02dqbuffersimple.c_size_from_scanmode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/Documentation/extr_lis3l02dqbuffersimple.c_size_from_scanmode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @size_from_scanmode(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 16, i32* %3, align 4
  br label %19

12:                                               ; preds = %8, %2
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 8, i32* %3, align 4
  br label %19

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = mul nsw i32 %17, 2
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %16, %15, %11
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
